--- a/LearningEnglishWeb/Views/Vocabulary/TranslationList.cshtml
+++ b/LearningEnglishWeb/Views/Vocabulary/TranslationList.cshtml
@@ -1,10 +1,15 @@
-﻿@model IEnumerable<string> 
+﻿@model IEnumerable<string>
 
 @foreach (var item in Model)
 {
     <p>
         <a class="translation-word">@item </a>
     </p>
+
 }
+
+<button class="add-own-word-button">
+    + Другой вариант
+</button>
 
 
