add first training

--- a/LearningEnglishWeb/Views/Training/Index.cshtml
+++ b/LearningEnglishWeb/Views/Training/Index.cshtml
@@ -9,18 +9,17 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm trainingCard">
-            <a>Тренировка 1</a>
-      
+        <div  class="col-sm trainingCard">
+            <a asp-action="Index" asp-controller="TranslateWordTraining">Перевод с английского на русский</a>      
         </div>
         <div class="col-sm trainingCard">
-            <a>Тренировка 2</a>
+            <a>Перевод с русского на английский</a>
         </div>
         <div class="col-sm trainingCard">
-            <a>Тренировка 3</a>
+            <a>Выбор перевода англо-русский </a>
         </div>
         <div class="col-sm trainingCard">
-            <a>Тренировка 4</a>
+            <a>Выбор перевода русско-английский</a>
         </div>
     </div>
     <div class="row">
