--- a/LearningEnglishWeb/wwwroot/css/site.css
+++ b/LearningEnglishWeb/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
 .add-word-button{
     visibility: hidden;
 }
+
+
+.checkAnswer {
+    background-color: aqua;
+}
+
+.wrongAnswer {
+    background-color: red;
+}
+
+.rightAnswer {
+    background-color: green;
+}
