Рефакторинг + добавлена новая тренировка

--- a/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -13,9 +13,10 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/training.css" />
 </head>
 <body>
     <header>
@@ -47,13 +48,13 @@
     <div class="container">
         <partial name="_CookieConsentPartial" />
         <div class="row">
-            <div class="col-sm-1">
+            <div class="col-sm-1 col-md-2 col-3">
 
             </div>
-            <main role="main" class="col-sm">
+            <main role="main" class="col-sm-10 col-md-8 col-6">
                 @RenderBody()
             </main>
-            <div class="col-sm-1">
+            <div class="col-sm-1 col-md-2 col-3">
 
             </div>
         </div>
