--- a/LearningEnglishWeb/Views/Training/Index.cshtml
+++ b/LearningEnglishWeb/Views/Training/Index.cshtml
@@ -16,7 +16,7 @@
             <a>Перевод с русского на английский</a>
         </div>
         <div class="col-sm trainingCard">
-            <a>Выбор перевода англо-русский </a>
+            <a asp-action="Index" asp-controller="ChooseTranslateTraining">Выбор перевода англо-русский </a>
         </div>
         <div class="col-sm trainingCard">
             <a>Выбор перевода русско-английский</a>
