--- a/LearningEnglishWeb/Views/Training/Index.cshtml
+++ b/LearningEnglishWeb/Views/Training/Index.cshtml
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="col-sm trainingCard">
-            <a>Тренировка 5</a>
+            <a asp-action="Index" asp-controller="CollectWordTraining" >Собери слово</a>
         </div>
         <div class="col-sm trainingCard">
             <a>Тренировка 6</a>
