--- a/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
@@ -15,7 +15,7 @@
             <button class="answerBtn" data-request-url="@Url.Action("CheckAnswer")"> @trans</button>
         }
 
-        <button class="answerBtn dontKnow">Не знаю</button>
+        <button class="answerBtn dontKnow"  data-request-url="@Url.Action("SkipQuestion")">Не знаю</button>
     </div>
 </div>
 
