--- a/LearningEnglishSpa/ClientApp/src/app/app.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/app.component.html
@@ -1,5 +1,10 @@
 <body>
-  <app-nav-menu></app-nav-menu>
+
+  <header>
+    <app-identity></app-identity>
+     
+  </header>
+
   <div class="container">
     <router-outlet></router-outlet>
   </div>
