--- a/LearningEnglishSpa/ClientApp/src/app/app.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/app.component.html
@@ -1,8 +1,16 @@
 <body>
 
   <header>
-    <app-identity></app-identity>
-     
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+      <div class="container">
+        <a class="navbar-brand" href="/">LearnEnglish</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>  
+          <app-identity class="navbar-collapse d-sm-inline-flex flex-sm-row-reverse collapse"></app-identity>
+      </div>
+    </nav>
+
   </header>
 
   <div class="container">
