--- a/LearningEnglishSpa/ClientApp/src/app/vocabulary/vocabulary.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/vocabulary/vocabulary.component.html
@@ -4,8 +4,11 @@
 </div>
 
 
-<div>
-  <p *ngFor="let translation of wordMaskTranslation"> {{translation}}</p>
+<div (clickOutside)="onClickedOutside($event)" class="w-50 m-2 text-center shadow-lg p-3 mb-5 bg-white rounded" [class.invisible]="hideTranslationArea">
+  <button *ngFor="let translation of wordMaskTranslation" class="btn btn-block" (click)="addWord(wordMask, $event.target.innerText)"> {{translation}}</button>
+
+ 
+  <button  class="btn btn-secondary" >Другое</button>
 </div>
 
 
