--- a/LearningEnglishSpa/ClientApp/src/app/training/chooseTrasnlate/chooseTranslateTraining.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/training/chooseTrasnlate/chooseTranslateTraining.component.html
@@ -1,19 +1,32 @@
-<main role="main" class="col-sm-10 col-md-8 col-6">
 
-
-  <div class="container shadow-lg p-5 mb-5 bg-white rounded" data-isreverse="False">
+<div class="container shadow-lg p-5 mb-5 bg-white rounded w-75" data-isreverse="False">
+  <div *ngIf="currentQuestion!== null; else showResultBlock">
     <div class="row mb-2">
-      <h5 class="col text-center">Вопрос 1 </h5>
+      <h5 class="col text-center">Вопрос {{currentQuestion.number}} </h5>
     </div>
     <div class="row">
       <div class="col-4">
         <h4> <span>{{currentQuestion.word}}</span> <button class="audio btn p-0">  <i class="fas audio fa-play"></i> </button></h4>
         <img id="wordImage" src="" class="w-100 mt-4 pl-0 ml-0" style="filter: blur(8px);">
       </div>
-      <div class="col-8 answerArea">
-        <button class="btn btn-info" *ngFor="let answer of currentQuestion.answers"> {{answer.translation}}</button>
-        <button class="btn btn-danger">Не знаю</button>
+      <div class="col-8 answerArea ">
+
+        <div *ngIf="!showAnswer; else elseBlock">
+          <button class="btn btn-info btn-block text-left" *ngFor="let answer of currentQuestion.answers" (click)="checkAnswer($event.target.innerText)">{{answer.translation}}</button>
+          <button class="btn btn-danger  btn-block text-left" (click)="checkAnswer(null)">Не знаю</button>
+        </div>
+        <ng-template #elseBlock>
+          <button class="btn btn-block text-left disabled" *ngFor="let answer of currentQuestion.answers"
+                  [ngClass]="answer.isRight ? (answer.userSelect ? 'btn-success' : (answer.question.skippedQuestion ? 'btn-danger' : 'btn-success')) : (answer.userSelect ? 'btn-danger' : '')">
+            {{answer.translation}}
+          </button>
+          <button class="btn btn-primary  btn-block text-left" (click)="nextQuestion()">Следующий вопрос</button>
+        </ng-template>
       </div>
     </div>
   </div>
-</main>
+  <ng-template #showResultBlock>
+    <app-training-result class="row align-items-center justify-content-center" [results]="training.getResult()" (newGameEvent)="newGame()">
+    </app-training-result>
+  </ng-template>
+</div>
