--- a/LearningEnglishSpa/ClientApp/src/app/modules/training/chooseTraining.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/modules/training/chooseTraining.component.html
@@ -18,14 +18,19 @@
     </div>
     <div class="col-sm card pt-5 pb-5">
       <div class="card-body text-center">
-        <button class="btn btn-block"  [routerLink]="['chooseTranslate']">выбор перевода русско-английский</button>
+        <button class="btn btn-block"  [routerLink]="['chooseTranslate/isReverse']">выбор перевода русско-английский</button>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-sm card pt-5 pb-5 mt-2 mr-2">
       <div class="card-body text-center">
-        <button class="btn btn-block">cобери слово</button>
+        <button class="btn btn-block" [routerLink]="['collectWord']">cобери русское слово</button>
+      </div>
+    </div>
+    <div class="col-sm card pt-5 pb-5 mt-2 mr-2">
+      <div class="card-body text-center">
+        <button class="btn btn-block" [routerLink]="['collectWord/isReverse']">cобери английское слово</button>
       </div>
     </div>
     <div class="col-sm card pt-5 pb-5 mt-2 mr-2">
