--- a/LearningEnglishSpa/ClientApp/src/app/modules/training/chooseTranslate/chooseTranslateTraining.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/modules/training/chooseTranslate/chooseTranslateTraining.component.html
@@ -7,7 +7,10 @@
     <div class="row">
       <div class="col-4">
         <h4> <span>{{currentQuestion.word}}</span> <button class="audio btn p-0">  <i class="fas audio fa-play"></i> </button></h4>
-        <img id="wordImage" src="" class="w-100 mt-4 pl-0 ml-0" style="filter: blur(8px);">
+
+        <img [src]="currentWordImageUrl" [ngStyle]="wordImageStyles">
+
+        <!--<img id="wordImage" src="" class="w-100 mt-4 pl-0 ml-0" style="filter: blur(8px);">-->
       </div>
       <div class="col-8 answerArea ">
 
@@ -26,7 +29,7 @@
     </div>
   </div>
   <ng-template #showResultBlock>
-    <app-training-result class="row align-items-center justify-content-center" [results]="training.getResult()" (newGameEvent)="newGame()">
+    <app-training-result *ngIf="training!= null" class="row align-items-center justify-content-center" [results]="training.getResult()" (newGameEvent)="newGame()">
     </app-training-result>
   </ng-template>
 </div>
