--- a/LearningEnglishSpa/ClientApp/src/app/modules/training/collectWord/collectWordTraining.component.html
+++ b/LearningEnglishSpa/ClientApp/src/app/modules/training/collectWord/collectWordTraining.component.html
@@ -1,28 +1,39 @@
 
-  <div class="container shadow-lg p-5 mb-5 bg-white rounded w-75  text-center" data-isreverse="False">
 
-    <div *ngIf="currentQuestion!== null; else showResultBlock">
-      <h5 class="col text-right">Вопрос {{currentQuestion.number}} </h5>
-      <h4> <span>{{currentQuestion.word}}</span> <button class="audio btn p-0">  <i class="fas audio fa-play"></i> </button></h4>
-      <img [src]="currentWordImageUrl" [ngStyle]="wordImageStyles">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="shadow-lg p-5 mb-5 bg-white rounded col-xl-8 col-12  text-center" data-isreverse="False">
 
-      <div *ngIf="!showAnswer; else elseBlock">
-        <div style="min-height: 50px;">
-          <button class="btn text-center btn-warning m-1 text-white" *ngFor="let letter of currentQuestion.userAnswer; index as i" (click)="removeLetter(i)">{{letter}}</button>
+        <div *ngIf="currentQuestion!== null; else showResultBlock">
+          <h5 class="col text-right">Вопрос {{currentQuestion.number}} </h5>
+          <div  style="min-height: 250px;">
+            <h4>
+              <span>{{ !showAnswer? currentQuestion.word : currentQuestion.translation }}</span>
+              <button class="btn p-0 ml-1" (click)="playWordAudio()"> <i class="fa fa-play text-success"></i> </button>
+            </h4>
+            <img [src]="currentWordImageUrl" [ngStyle]="wordImageStyles">
+          </div>
+          <div *ngIf="!showAnswer; else elseBlock">
+            <div style="min-height: 50px;">
+              <button class="btn text-center btn-warning m-1 text-white" *ngFor="let letter of currentQuestion.userAnswer; index as i" (click)="removeLetter(i)">{{letter}}</button>
+            </div>
+            <div style="min-height: 50px;">
+              <button class="btn text-center btn-info m-1 text-white" *ngFor="let letter of currentQuestion.letters; index as i" (click)="putLetter(i)">{{letter}}</button>
+            </div>
+          </div>
+          <ng-template #elseBlock>
+            <div style="min-height: 50px;">
+              <button class="btn text-center m-1 text-white" *ngFor="let letter of currentQuestion.userAnswer; index as i" [ngClass]="letter==currentQuestion.translation[i]? 'btn-success': 'btn-danger' ">{{letter}}</button>
+            </div>
+            <div style="min-height: 50px;">
+              <button class="btn btn-primary text-left w-50" (click)="nextQuestion()">Следующий вопрос</button>
+            </div>
+          </ng-template>
         </div>
-        <div style="min-height: 50px;">
-          <button class="btn text-center btn-info m-1 text-white" *ngFor="let letter of currentQuestion.letters; index as i" (click)="putLetter(i)">{{letter}}</button>
-        </div>
+        <ng-template #showResultBlock>
+          <app-training-result *ngIf="training!= null" class="row align-items-center justify-content-center" [results]="training.getResult()" (newGameEvent)="newGame()">
+          </app-training-result>
+        </ng-template>
       </div>
-      <ng-template #elseBlock>
-        <div style="min-height: 50px;">
-          <button class="btn text-center m-1 text-white" *ngFor="let letter of currentQuestion.userAnswer; index as i" [ngClass]="letter==currentQuestion.translation[i]? 'btn-success': 'btn-danger' ">{{letter}}</button>
-        </div>
-        <button class="btn btn-primary text-left w-50" (click)="nextQuestion()">Следующий вопрос</button>
-      </ng-template>
     </div>
-    <ng-template #showResultBlock>
-      <app-training-result *ngIf="training!= null" class="row align-items-center justify-content-center" [results]="training.getResult()" (newGameEvent)="newGame()">
-      </app-training-result>
-    </ng-template>
   </div>
