--- a/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/CollectWordTraining/CollectWordTrainingQuestion.cshtml
@@ -1,5 +1,5 @@
-﻿@model CollectWordQuestion
-
+﻿@using LearningEnglishWeb.Models.Training.CollectWord
+@model CollectWordQuestion
 
 <h4 class="text-center">
     @Model.Word
