--- a/LearningEnglishWeb/Views/Shared/_Layout.cshtml
+++ b/LearningEnglishWeb/Views/Shared/_Layout.cshtml
@@ -93,6 +93,8 @@
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
+    <script src="~/js/training.js" asp-append-version="true"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
