--- a/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
@@ -7,10 +7,10 @@
 
 <div class="row">
     <div class="col-4">
-        <h4> <span>@Model.Word</span> <button class="audio btn p-0">  <i class="fas audio fa-play"></i> </button></h4>
+        <h4> <span>@Model.Word</span> <button class="audio btn p-0"  data-request-url="@Url.Action("GetAudio", "Vocabulary")">  <i class="fas audio fa-play"></i> </button></h4>
         
 
-        <img  id="wordImage" src="@Model.ImageSrc" class="w-100 mt-4 pl-0 ml-0" style="filter: blur(0px)"/>
+        <img  id="wordImage" src="@Model.ImageSrc" class="w-100 mt-4 pl-0 ml-0" />
     </div>
     <div class="col-8 answerArea">        
         @foreach (var trans in Model.Translations)
