--- a/LearningEnglishWeb/Views/CollectWordTraining/Index.cshtml
+++ b/LearningEnglishWeb/Views/CollectWordTraining/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model  CollectWordQuestion
+﻿@using LearningEnglishWeb.Models.Training.CollectWord
+@model  CollectWordQuestion
+
 @{
     ViewData["Title"] = "Index";
 }
