--- a/IdentityApi/Views/Account/Login.cshtml
+++ b/IdentityApi/Views/Account/Login.cshtml
@@ -5,55 +5,58 @@
 @{
     ViewData["Title"] = "Log in";
 }
-<div class="brand-header-block">
-    <ul class="container">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Регистрация</a></li>
-        <li class="active" style="margin-right: 65px;">Войти</li>
-    </ul>
-</div>
-<div class="container account-login-container">
-    <div class="row">
-        <div class="col-md-12">
-            <section>
-                <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                    <input type="hidden" asp-for="ReturnUrl" />
-                    <h4>Вы уже зарегестрированы?</h4>
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="Email" class="control-label form-label"></label>
-                        <input asp-for="Email" class="form-control form-input form-input-center" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Password" class="control-label form-label"></label>
-                        <input asp-for="Password" class="form-control form-input form-input-center" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label asp-for="RememberMe">
-                                <input asp-for="RememberMe" />
-                                @Html.DisplayNameFor(m => m.RememberMe)
-                            </label>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6 border-left">
+                <nav class="navbar navbar-expand-md bg-light row">
+                    <ul class="nav navbar-nav nav-tabs ml-auto">
+                        <li class="nav-item" style="width:150px">
+                            <a asp-area="" asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" class="nav-link"> Регистрация</a>
+                        </li>
+                        <li class="nav-item" style="width:150px">
+                            <a class="nav-link active disabled" href="#">Войти</a>
+                        </li>
+                    </ul>
+                </nav>               
+                <div class="container account-login-container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <section>
+                                <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                                    <input type="hidden" asp-for="ReturnUrl" />
+                                    <h4>Вы уже зарегестрированы?</h4>
+                                    <div asp-validation-summary="All" class="text-danger"></div>
+                                    <div class="form-group">
+                                        <label asp-for="Email" class="control-label form-label"></label>
+                                        <input asp-for="Email" class="form-control form-input form-input-center" />
+                                        <span asp-validation-for="Email" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label asp-for="Password" class="control-label form-label"></label>
+                                        <input asp-for="Password" class="form-control form-input form-input-center" />
+                                        <span asp-validation-for="Password" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="checkbox">
+                                            <label asp-for="RememberMe">
+                                                <input asp-for="RememberMe" />
+                                                @Html.DisplayNameFor(m => m.RememberMe)
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group text-right">
+                                        <button type="submit" class="btn btn-primary">&nbsp;Войти&nbsp;</button>
+                                    </div>
+                                    <p>
+                                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" class="text">Зарегестрировать нового пользователя?</a>
+                                    </p>
+                                </form>
+                            </section>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-default btn-brand btn-brand-big">&nbsp;Войти&nbsp;</button>
-                    </div>
-                    <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" class="text">Register as a new user?</a>
-                    </p>
-                    <p>
-                        Note that for demo purposes you don't need to register and can login with these credentials:
-                    </p>
-                    <p>
-                        User:     <b>demouser@microsoft.com</b>
-                    </p>
-                    <p>
-                        Password: <b>Pass@word1</b>
-                    </p>
-                </form>
-            </section>
+                </div>
+            </div>
         </div>
     </div>
-</div>
