--- a/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingAnswerResult.cshtml
+++ b/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingAnswerResult.cshtml
@@ -1,5 +1,4 @@
-﻿@using LearningEnglishWeb.Helpers
-@model LearningEnglishWeb.ViewModels.Training.TranslateWordAnswerResult
+﻿@model LearningEnglishWeb.ViewModels.Training.TranslateWord.TranslateWordAnswerViewModel
 
 
 <div class="text-center">
@@ -24,4 +23,4 @@
     <button data-request-url="@Url.Action("GetNextQuestion")" class="btn btn-primary w-50 nextAnswerBtn"> Следующий вопрос</button>
 </div>
 
-@*@Html.CreateTranslateWordTrainingAnswerResult(@Model, Url.Action("GetNextQuestion"))*@
+
