--- a/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/TranslateWordTraining/TranslateWordTrainingQuestion.cshtml
@@ -1,4 +1,9 @@
-﻿@model LearningEnglishWeb.ViewModels.Training.TranslateWordQuestionModel
+﻿@model LearningEnglishWeb.ViewModels.Training.Abstractions.QuestionViewModel
+
+
+<div class="row mb-2">
+    <h5 class="col text-center">Вопрос @Model.QuestionNumber </h5>
+</div>
 
 <div class="text-center">
     <h4> @Model.Word </h4>
