--- a/LearningEnglishWeb/Views/Vocabulary/TranslationList.cshtml
+++ b/LearningEnglishWeb/Views/Vocabulary/TranslationList.cshtml
@@ -1,4 +1,4 @@
-﻿@model LearningEnglishWeb.ViewModels.TranslationListModel
+﻿@model LearningEnglishWeb.ViewModels.Vocabulary.TranslationListModel
 
 @if (!@Model.Translations.Any())
 {
