--- a/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
+++ b/LearningEnglishWeb/Views/ChooseTranslateTraining/ChooseTranslateTrainingQuestion.cshtml
@@ -1,4 +1,4 @@
-﻿@model LearningEnglishWeb.ViewModels.Training.ChooseTranslateQuestionModel
+﻿@model LearningEnglishWeb.ViewModels.Training.ChooseTranslate.ChooseTranslateQuestionViewModel
 
 
 <div class="row mb-2">
@@ -12,13 +12,13 @@
 
         <img  id="wordImage" src="@Model.ImageSrc" class="w-100 mt-4 pl-0 ml-0" />
     </div>
-    <div class="col-8 answerArea">        
+    <div class="col-8 answerArea" id="answerRefreshArea">        
         @foreach (var trans in Model.Translations)
         {
-            <button class="answerBtn btn btn-info" data-request-url="@Url.Action("CheckAnswer")"> @trans</button>
+            <button class="answerBtn btn-block m-2 btn btn-info text-left" data-request-url="@Url.Action("CheckAnswer")"> @trans</button>
         }
 
-        <button class="answerBtn dontKnow btn btn-danger"  data-request-url="@Url.Action("SkipQuestion")">Не знаю</button>
+        <button class="skipBtn btn-block m-2 btn btn-danger text-left"  data-request-url="@Url.Action("CheckAnswer")">Не знаю</button>
     </div>
 </div>
 
